# sentinel

./: LICENSE  README.md  bug.py  config.py  config.yaml  dsl.py  flake.nix  grammer.lark  ir.py  ir_builder.py  main.py  parser.py  pyproject.toml  report.py  sentinel.rules  taint.py  tests.py
.github/workflows/: code-quality.yml
docs/: OVERVIEW.md
