[project]
name = "sentinel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lark>=1.3.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort, B = flake8-bugbear, UP = pyupgrade
select = ["E", "W", "F", "I", "B", "UP"]
ignore = [
    "E501",   # line too long – handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
